log
Fri Mar 20 05:49:20 PM UTC 2026: 
 exercises.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:84:10: error: ‘pilaAux’ may be used uninitialized [-Werror=maybe-uninitialized]
   84 |          pushFront(pilaAux, elemento);
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:79:11: note: ‘pilaAux’ was declared here
   79 |    Stack* pilaAux;
      |           ^~~~~~~
cc1: all warnings being treated as errors
c1b38cf
Fri Mar 20 05:53:35 PM UTC 2026: 
 exercises.c | 17 ++++++++++-------
 1 file changed, 10 insertions(+), 7 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:79:21: error: implicit declaration of function ‘createStack’; did you mean ‘create_stack’? [-Wimplicit-function-declaration]
   79 |    Stack* pilaAux = createStack();
      |                     ^~~~~~~~~~~
      |                     create_stack
exercises.c:79:21: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
exercises.c:94:22: error: expected ‘;’ before ‘elemento’
   94 |          pop(pilaAux)
      |                      ^
      |                      ;
   95 |          elemento = top(pilaAux);
      |          ~~~~~~~~     
e29f31e
Fri Mar 20 05:53:53 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:79:21: error: implicit declaration of function ‘createStack’; did you mean ‘create_stack’? [-Wimplicit-function-declaration]
   79 |    Stack* pilaAux = createStack();
      |                     ^~~~~~~~~~~
      |                     create_stack
exercises.c:79:21: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
5d62d9e
Fri Mar 20 05:54:37 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
3ee2b37
Fri Mar 20 05:58:30 PM UTC 2026: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:18: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   64 |          cont += (int)elemento;
      |                  ^
exercises.c:65:28: error: expected ‘;’ before ‘}’ token
   65 |          elemento = next(L)
      |                            ^
      |                            ;
   66 |       }
      |       ~                     
cc1: all warnings being treated as errors
d5a6d6d
Fri Mar 20 05:58:47 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:18: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   64 |          cont += (int)elemento;
      |                  ^
cc1: all warnings being treated as errors
f7cf17f
